Styling fixes * Margin fixes in article content * a:hover should be red in content * width overflow due to footer fixed

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -35,7 +35,6 @@ footer .footer ul > li > ul {
 .footer-bottom {
   display: flex;
   flex-flow: row wrap-reverse;
-  width: 100%;
   max-width: 1300px;
   margin: 0 auto;
   justify-content: center;
